--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "pusher/pusher-php-server": "^7.2",
-        "zircote/swagger-php": "^4.9"
+        "zircote/swagger-php": "^4.9",
+        "ext-gd": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
