feat: :sparkles: Страница пользователя и компании!!!

--- a/swag.yaml
+++ b/swag.yaml
@@ -37,10 +37,30 @@ paths:
         $ref: '#/components/requestBodies/LoginRequest'
       responses:
         '200':
+          description: 'Ответ при успешном выполнении запроса'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/loginUser'
+  '/api/users/{id}':
+    get:
+      tags:
+        - UserController
+      summary: 'Метод получения информации о пользователи по его id'
+      operationId: 6f51bd5fa2dddcd25e44cfa53dcbd10a
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'id пользователя'
+          required: true
+      responses:
+        '200':
+          description: 'Ответ при успешном выполнении запроса'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/show'
   /api/networking/:
     get:
       tags:
@@ -126,6 +146,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/getComments'
+  '/api/companies/{id}':
+    get:
+      tags:
+        - CompanyController
+      summary: 'Метод получения информации о компании по её id'
+      operationId: 01c261c039e4b27beeb888ef46bd86db
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'id компании'
+          required: true
+      responses:
+        '200':
+          description: 'Ответ при успешном выполнении запроса'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/showCompany'
   '/api/files/{id}':
     get:
       tags:
@@ -284,6 +323,44 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/getPostByID'
+  '/api/users/{id}/posts':
+    get:
+      tags:
+        - PostController
+      summary: 'Метод получения постов по id пользователя'
+      operationId: 8b4ca3da355ba0949751c12e732a3497
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'id поста'
+          required: true
+      responses:
+        '200':
+          description: 'Ответ при успешном выполнении запроса'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getPostsByUser'
+  '/api/companies/{id}/posts':
+    get:
+      tags:
+        - PostController
+      summary: 'Метод получения постов по id компании'
+      operationId: 480e67b5ae55306ca6053161cdf4c839
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'id компании'
+          required: true
+      responses:
+        '200':
+          description: 'Ответ при успешном выполнении запроса'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getPostsByCompany'
   /api/vacancies:
     get:
       tags:
@@ -374,6 +451,14 @@ components:
         token:
           type: string
       type: object
+    show:
+      properties:
+        success:
+          type: boolean
+          example: 'true'
+        response:
+          $ref: '#/components/schemas/user'
+      type: object
     getAllChats:
       properties:
         success:
@@ -423,6 +508,14 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/detailComment'
+      type: object
+    showCompany:
+      properties:
+        success:
+          type: boolean
+          example: 'true'
+        response:
+          $ref: '#/components/schemas/detailCompany'
       type: object
     getChats:
       properties:
@@ -489,7 +582,7 @@ components:
         success:
           type: boolean
           example: 'true'
-        posts:
+        response:
           type: array
           items:
             $ref: '#/components/schemas/post'
@@ -499,7 +592,23 @@ components:
         success:
           type: boolean
           example: 'true'
-        post:
+        response:
+          $ref: '#/components/schemas/detailPost'
+      type: object
+    getPostsByUser:
+      properties:
+        success:
+          type: boolean
+          example: 'true'
+        response:
+          $ref: '#/components/schemas/post'
+      type: object
+    getPostsByCompany:
+      properties:
+        success:
+          type: boolean
+          example: 'true'
+        response:
           $ref: '#/components/schemas/post'
       type: object
     getVacancies:
@@ -678,6 +787,8 @@ components:
         updated_at:
           format: date
         image:
+          $ref: '#/components/schemas/image'
+        preview:
           $ref: '#/components/schemas/image'
         building:
           $ref: '#/components/schemas/building'
@@ -859,6 +970,8 @@ components:
           type: integer
         description:
           type: string
+        is_from_company:
+          type: boolean
         source:
           $ref: '#/components/schemas/sources'
         user_name:
@@ -870,6 +983,10 @@ components:
           format: date
         updated_at:
           format: date
+        images:
+          type: array
+          items:
+            $ref: '#/components/schemas/image'
       type: object
     detailPost:
       properties:
@@ -889,6 +1006,8 @@ components:
           type: integer
         description:
           type: string
+        is_from_company:
+          type: boolean
         source:
           $ref: '#/components/schemas/sources'
         user_name:
@@ -900,10 +1019,6 @@ components:
           format: date
         updated_at:
           format: date
-        comments:
-          type: array
-          items:
-            $ref: '#/components/schemas/detailComment'
         images:
           type: array
           items:
@@ -916,12 +1031,16 @@ components:
           type: integer
         name:
           type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
         email:
           type: string
         workingStatus_id:
           type: integer
-        position_id:
-          type: integer
+        position:
+          $ref: '#/components/schemas/position'
         sex:
           type: boolean
         date_of_birth:
@@ -931,6 +1050,12 @@ components:
           nullable: true
         hrable_type:
           type: string
+        image:
+          $ref: '#/components/schemas/image'
+        preview:
+          $ref: '#/components/schemas/image'
+        company:
+          $ref: '#/components/schemas/company'
         created_at:
           format: date
         updated_at:
@@ -1042,7 +1167,7 @@ components:
         date_of_birth:
           format: date
         hrable:
-          $ref: '#/components/schemas/HR'
+          $ref: '#/components/schemas/detailHR'
         image:
           $ref: '#/components/schemas/image'
         created_at:
